--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,7 @@
  */
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Lobster&family=Mea+Culpa&family=Montserrat:wght@100;200;300;400;500;600;700&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
+@import "colorVariable";
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -195,5 +196,41 @@ header {
         transform: scale(1);
       }
     }
+  }
+}
+
+.testimonial-hero, .testimonial-hero img {
+  width: 365px;
+  height: 500px;
+}
+
+footer {
+  border-top: 1px solid $gray-200;
+  padding-top: 50px;
+
+  .brand-tagline {
+    color: $gray-500;
+    font-weight: 300;
+    margin-top: 8px;
+  }
+
+  .list-group-item {
+    padding: 0.3125rem 0;
+    border: 0;
+    a, span {
+      color: $gray-500;
+      font-weight: 300;
+    }
+    a {
+      @include hover-focus {
+        color: $gray-800;
+      }
+    }
+  } 
+
+  .copyrights {
+    margin: 50px 0;
+    font-weight: 300;
+    color: $gray-500;
   }
 }
